<resources>
    <string name="app_name">PomodoroApp</string>
    <string name="start_to_focus">Start to Focus</string>
    <string name="_0">0</string>
    <string name="time_left">Time Left</string>
    <string name="_15m">+15m</string>
    <string name="break_time">Break Time</string>
    <string name="start">Start</string>
    <string name="_00">00</string>
    <string name="okay">OKAY</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="work_time">WORK TIME</string>
    <string name="set_work_time">SET WORK TIME</string>
    <string name="go_homepage">Go HomePage</string>
    <string name="what_is_pomodoro">What is Pomodoro?</string>
    <string name="go_github">GO GITHUB</string>
    <string name="minutes">Minutes</string>
    <string name="set_break_time">SET BREAK TIME</string>
    <string name="time">Time</string>
    <string name="settings_time">Settings Time</string>
    <string name="deneme">deneme</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_timer">Settings Timer</string>
    <string name="points">...</string>
    <string name="set_timer">set timer</string>
    <string name="selected_time">The selected time is:</string>
    <string name="get_ready">Get Ready</string>
    <string name="set_finish_rounds">You have finish your rounds :)</string>
    <string name="study_time">Study Time</string>
    <string name="press_button">Press Play Button to Restart</string>
    <string name="welcome_to_pomodoro_app">Welcome to Pomodoro App</string>
    <string name="study_time_in_minute">Study Time in minute</string>
    <string name="break_time_in_minute">Break Time in minute</string>
    <string name="round_time">Round Time</string>
    <string name="_1_5">1/5</string>
    <string name="_10">10</string>


</resources>