<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ui_background_one"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tvWelcomeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/welcome_to_pomodoro_app"
        android:textColor="#1C83D5"
        android:textSize="27sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutAllTextInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStudyTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etStudyTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/study_time_in_minute"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilBreakTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/black">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etBreakTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/break_time_in_minute"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilRountTime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeColor="@color/white"
            app:hintTextColor="@color/white">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etStartRoundTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/round_time"
                android:inputType="number"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStart"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#1C83D5"
        android:textSize="25sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/guidelineSettings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutAllTextInput" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.78" />

    <LinearLayout
        android:id="@+id/linearLayoutLast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.582"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineSettings"
        app:layout_constraintVertical_bias="0.584">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnWhatIsPomodoro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:backgroundTint="#91CBFA"
            android:text="@string/what_is_pomodoro"
            android:textColor="#1C83D5"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoGithub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/go_github"
            android:textColor="#1C83D5"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>